fix featured blog being shown on mobile

--- a/themes/aframe/source/css/_common.styl
+++ b/themes/aframe/source/css/_common.styl
@@ -229,7 +229,7 @@ h4
     content ""
     display table
 
-@media screen and (max-width: 800px)
+@media screen and (max-width: 768px)
     .sidebar__wrap,
     .copy__wrap
         padding 20px
