--- a/themes/aframe/source/css/examples.styl
+++ b/themes/aframe/source/css/examples.styl
@@ -1,6 +1,6 @@
 /* For mobile-friendly Examples only, not Homepage */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   .mobile-get-started {
     display: inline-block;
     position: absolute;
