--- a/themes/aframe/source/css/index.styl
+++ b/themes/aframe/source/css/index.styl
@@ -283,7 +283,7 @@ a.mozilla-logo:hover {
     right: 20px;
   }
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   .example__controls {
     top: 30px;
     right: 30px;
